--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <head>
         <meta charset = "utf-8">
         <meta norm = "viewport" content = "widtd = device widtd, initial-scale = 1">
-        <title>This is website, which is working as database of databases</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+        <title>Saich</title>
         <h1>PROTEIN DATABASES</h1>
     </head>
 
@@ -14,7 +15,7 @@
         <br>
         <br>
         <hr>
-        This website can be referred as database of databases<br>
+        Saich - database of databases<br>
         <hr>
         <br>
         <br>
@@ -74,8 +75,7 @@
             </tr>
 
         </table>
-
-
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
     </body>
 
 </html>
