--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
             <tr>
                 <td> <a href = "https://pubchem.ncbi.nlm.nih.gov/" target ="_blank"><b><u>Link to Pubchem</u></b></a><br></td>
-                <td>Database of chemical molecules and tdeir activities against biological assays</td>
+                <td>Database of chemical molecules and their activities against biological assays</td>
             </tr>
 
             <tr>
@@ -59,7 +59,7 @@
 
             <tr>
                 <td> <a href = "https://hmdb.ca/" target ="_blank"><b><u>Link to HMDB</u></b></a><br></td>
-                <td> Containing detailed information about small molecule metabolites found in tde human body</td>
+                <td> Containing detailed information about small molecule metabolites found in the human body</td>
             </tr>
             
             <tr>
@@ -69,7 +69,7 @@
 
             <tr>
                 <td> <a href = "https://www.bindingdb.org/bind/index.jsp" target ="_blank" ><b><u>Link to Binding DB</u></b></a><br></td>
-                <td>Database of measured binding affinities, focusing chiefly on tde interactions of proteins considered to be candidate <br>drug-targets witd ligands tdat are small, drug-like molecules.</td>
+                <td>Database of measured binding affinities, focusing chiefly on the interactions of proteins considered to be candidate <br>drug-targets with ligands that are small, drug-like molecules.</td>
             </tr>
 
             <tr>
